// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pegasus";
option java_outer_classname = "ServePegasus";

package serve;

service Serve {
    rpc  HandlerSync(HandlerRequest) returns (HandlerReply) {}
    rpc  Handler(stream HandlerRequest) returns (stream HandlerReply) {}
}

message HandlerRequest {
    bytes content = 1;
    bytes options = 2;
    string path = 3;
}

message HandlerReply {
    bytes content = 1;
    bytes options = 2;
}
